<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.lltest.appFrameTest.Activity3">

    <TextView
        android:id="@+id/act3_txt_info_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/hello_blank_fragment" />

    <Button
        android:id="@+id/finish3_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close_myself"
        android:textStyle="bold"
        android:clickable="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:showDividers="middle"
        android:orientation="vertical">

        <TextView android:text="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- table for edit info -->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Row #1 -->
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView android:text="@string/roll_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <EditText android:id="@+id/editRollno"
                    android:inputType="number"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"/>
            </TableRow>

            <!-- Row #2 -->
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView android:text="@string/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <EditText android:id="@+id/editName"
                    android:inputType="text"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"/>
            </TableRow>

            <!-- Row #3 -->
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView android:text="@string/marks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <EditText android:id="@+id/editMarks"
                    android:inputType="number"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"/>
            </TableRow>



        </TableLayout>

        <!-- table for buttons -->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Row #1 -->
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button	  android:id="@+id/btnAdd"
                    android:text="@string/add"
                    android:layout_width="100dp"
                    android:layout_height="40dp"/>
                <Button	  android:id="@+id/btnDelete"
                    android:text="@string/delete"
                    android:layout_width="100dp"
                    android:layout_height="40dp"/>

            </TableRow>

            <!-- Row #2 -->
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button   android:id="@+id/btnModify"
                    android:text="@string/modify"
                    android:layout_width="100dp"
                    android:layout_height="40dp"/>
                <Button   android:id="@+id/btnView"
                    android:text="@string/view"
                    android:layout_width="100dp"
                    android:layout_height="40dp"/>

            </TableRow>

            <!-- Row #3 -->
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button   android:id="@+id/btnViewAll"
                    android:text="@string/view_all"
                    android:layout_width="100dp"
                    android:layout_height="40dp"/>
                <Button   android:id="@+id/btnShowInfo"
                    android:text="@string/show_info"
                    android:layout_width="100dp"
                    android:layout_height="40dp"/>

            </TableRow>

        </TableLayout>

    </LinearLayout>

</LinearLayout>
