<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lltest.appFrameTest.FragmentTwo">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/linear_layout_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/hello_blank_fragment" />

        <Button
            android:id="@+id/two_close_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/close_myself"
            android:textStyle="bold" />

        <Button
            android:id="@+id/two_f1_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/go_to_f1"
            android:textStyle="bold" />

    </LinearLayout>

</FrameLayout>
